# Grok

./: .gitignore  README.md  environment.yml  requirements-gui-PyQt.txt  requirements-gui-PySide2.txt  requirements-gui-PySide6.txt  requirements.txt  requirements_gui.txt  setup.cfg  setup_korg.py
.github/workflows/: conda.yml  python.yml
app/: style_sheet.py
app/common/: config.py
python/: 20240520.py  refactored_continuum.py
python/Grok/: __main__.py  refactored_continuum.py  session.py  thread_example.py  utils.py
python/Grok/app/: backend.py
python/Grok/app/common/: config.py  style_sheet.py
python/Grok/app/components/: analysis.py  continuum.py  curve_of_growth.py  linear_spectral_model.py  plot.py  quick_view.py  radial_velocity.py  tool_bar.py
python/Grok/app/config/: config.json
python/Grok/app/view/: analysis_interface.py  home_interface.py  main_window.py  setting_interface.py
python/Grok/models/: basis.py  continuum_basis.py  line_profile.py  profile.py  rbf_line_model.py  spectral_line.py  stellar_spectrum.py
python/Grok/spectrum/: loaders.py  spectrum.py  utils.py
python/Grok/specutils/: continuum.py  loaders.py  lsf.py  rv.py  spectrum.py  spectrum_new.py  utils.py
python/Grok/synthesis/: __init__.py  korg.py  korg_process.jl
python/test/: test_julia.py  test_test.py
