[metadata]
name = Grok
version = 0.0.1
author = Andy Casey and collaborators
author_email = andrew.casey@monash.edu
description = Understand stars better with Korg. 
url = https://github.com/andycasey/Grok
project_urls =
	Repository = https://github.com/andycasey/Grok
	Documentation = https://grok.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
package_dir =
	= python
#install_requires =

[options.packages.find]
where =
	python

[options.package_data]
Grok =
	etc/*

[options.extras_require]
dev =
	ipython>=7.9.0
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-asyncio>=0.10.0
	pytest-cov>=2.8.1
	pytest-mock>=1.13.0
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
	sphinx>=3.0.0
docs =
	Sphinx>=3.0.0,<4.0.0
	sphinx_bootstrap_theme>=0.4.12
	jinja2==3.0.0


gui =  
        PySide6-Fluent-Widgets[full]


[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = Grok
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

#[tool:pytest]
#addopts = --cov Grok --cov-report html -W ignore

[coverage:run]
branch = true
include =
	python/Grok/*
omit =
    */__init__.py

[coverage:report]
exclude_lines =
